# CPCDOS-Interpreter

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/ci/: CPCLINE.h  CPCTOKEN.h  str.h
inc/ci/cpc/: CPCLINE.h  CPCTOKEN.h  CPCVAR.h  parser.h  str.h
src/: CPCTOKEN.c  CPCVAR.c  main.c  parser.c  str.c  utils.c
src/ci/: CPCTOKEN.c  CPCVAR.c  main.c  parser.c  str.c
src/ci/cpc/: CPCTOKEN.c  CPCVAR.c  parser.c  str.c
src/header/: CPCTOKEN.h  CPCVAR.h  parser.h  utils.h
tests/: test-fix.cpc  test-txt.cpc
